@@ -23,7 +23,8 @@ S4U:
    on between two (possibly remote) hosts.
 
 XBT:
- - Drop simgrid::xbt::demangle. Please use boost::core::demangle instead.
+ - Drop simgrid::xbt::demangle(). Please use boost::core::demangle() instead.
+ - Drop xbt_dynar_cursor_rm(), xbt_dynar_search_or_negative(), xbt_dynar_to_array().
 
 C binding and interface:
  - Rename (lowercase) functions sg_actor_get_PID, sg_actor_get_PPID, sg_actor_by_PID.
